# pygcf

./: .gitignore  LICENSE  Pipfile  README.md  conf.py  pyproject.toml  requirements.txt  setup.cfg
doc/: conf.py  index.rst
gcf/: __init__.py  blob.py  color_map.py  compress.py  compression.py  decode.py  file.py  header.py  image.py  resource.py  resource_format.py  texture.py  util.py  vulkan.py
test/: fixtures.py  test_blob.py  test_blob_resource.py  test_blob_resource_descriptor.py  test_compress.py  test_compression.py  test_decode.py  test_file.py  test_header.py  test_image_resource.py  test_image_resource_descriptor.py  test_mip_level.py  test_mip_level_descriptor.py  test_resource.py  test_resource_descriptor.py  test_texture.py  test_util.py
