[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pygcf"
version = "2.0.1"

[options]
packages = "gcf"

[tool.isort]
profile = "black"
skip_gitignore = true
line_length = 120
use_parentheses = true
atomic = true

[tool.flake8]
max-line-length = 120
extend-ignore = "E203"

[tool.black]
line-length = 120
