[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pygcf"
version = "5.0.0"
description = "The Global Container Format reference implementation."
readme = "README.md"
license = {file = "LICENSE"}
authors = [{ name = "Alfredo Mungo" }]
keywords = ["gcf", "global", "container", "game", "format", "texture"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia"
]

[project.urls]
spec = "https://github.com/global-container-format/gcf-spec"
repository = "https://github.com/global-container-format/pygcf"

[tool.isort]
profile = "black"
skip_gitignore = true
line_length = 120
use_parentheses = true
atomic = true

[tool.pylint]
max-line-length = 120

[tool.black]
line-length = 120

[tool.sphinx]
extensions = ["sphinx.ext.autodoc", "sphinx.ext.viewcode"]
templates_path = ['_templates']
exclude_patterns = ['_build', 'Thumbs.db', '.DS_Store']


# -- Options for HTML output -------------------------------------------------
# https://www.sphinx-doc.org/en/master/usage/configuration.html#options-for-html-output

html_theme = 'haiku'
html_static_path = ['_static']
nitpicky = true

[tool.setuptools]
packages = ["gcf"]

[tool.setuptools.package-data]
gcf = ["py.typed"]
